Update and rename INDEX.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
   <h1>Forex Sessions (Kenya Time)</h1>
   <div id="asian" class="session">
     <div class="label">Asian Session</div>
-    <div class="time">2:00 AM ¨C 11:00 AM</div>
+    <div class="time">2:00 AM Â¨C 11:00 AM</div>
   </div>
   <div id="london" class="session">
     <div class="label">London Session</div>
-    <div class="time">10:00 AM ¨C 7:00 PM</div>
+    <div class="time">10:00 AM Â¨C 7:00 PM</div>
   </div>
   <div id="newyork" class="session">
     <div class="label">New York Session</div>
-    <div class="time">3:00 PM ¨C 12:00 AM</div>
+    <div class="time">3:00 PM Â¨C 12:00 AM</div>
   </div>
   <div id="countdown" class="countdown"></div>
 
